--- a/src/main/webapp/mock/kovanye-vorota.htm
+++ b/src/main/webapp/mock/kovanye-vorota.htm
@@ -470,11 +470,11 @@
             opacity: 1;
         }</style>
     </noscript>
-    <script type="text/javascript" charset="UTF-8" src="kovanye-vorota_files/common.js"></script>
+    <!--<script type="text/javascript" charset="UTF-8" src="kovanye-vorota_files/common.js"></script>
     <script type="text/javascript" charset="UTF-8" src="kovanye-vorota_files/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="kovanye-vorota_files/stats.js"></script>
     <script type="text/javascript" charset="UTF-8"
-            src="kovanye-vorota_files/AuthenticationService.Authenticate"></script>
+            src="kovanye-vorota_files/AuthenticationService.Authenticate"></script>-->
 </head>
 
 <body class="page-template-default page page-id-89 custom-background header-text-is-on google-fonts-on logo-is-on wpb-js-composer js-comp-ver-4.11.2 vc_responsive">
