--- a/src/main/webapp/mock/MercedesBenz.htm
+++ b/src/main/webapp/mock/MercedesBenz.htm
@@ -1,71 +1,36 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="s" uri="/struts-tags" %>
-<link type="text/css" href="<%=request.getContextPath()%>/mock/MercedesBenz_files/widget.min.css" rel="stylesheet">
-<script type="text/javascript">
+<!-- saved from url=(0025)http://mercedes-promo.ru/ -->
+<html class="no-js wf-roboto-n1-active wf-roboto-n4-active wf-roboto-n7-active wf-roboto-n3-active wf-active" lang="">
+<!--<![endif]-->
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="manifest" href="http://mercedes-promo.ru/ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
-
-    $(document).ready(function () {
-        // No right click
-        close_phone()
-
-    });
-    function close_phone() {
-        $('#call').addClass('cbh-widget-call_closed');
-        $('#phone').removeClass('cbh-widget-open');
-
-    }
-    function open_phone() {
-        $('#call').removeClass('cbh-widget-call_closed');
-        $('#phone').addClass('cbh-widget-open');
-    }
-
-
-</script>
-<div class="sidebar-wrap">
-    <div class="sidebar-before-footer wide">
-        <div class="widget-area">
-
-            <aside id="search-7" class="widget widget_search">
-                <form role="search" method="get" class="search-form" action="search.htm">
-                    <label>
-                        <span class="screen-reader-text">Найти:</span>
-                        <input class="search-field" placeholder="Поиск…" value="" name="search" type="search">
-                    </label>
-                    <input class="search-submit" value="Поиск" type="submit">
-                </form>
-            </aside>
-            <aside id="text-13" class="widget widget_text"><h3 class="widget-title">Tel: 8 (495) 642-40-66 e-mail:
-                Kovka@Zheldor-Kovka.ru</h3>
-                <div class="textwidget"><span style="color: #000000;"><center>© 2007-2017 Студия художественной ковки в Железнодорожном. Кованые и сварные изделия на заказ в Москве и Московской области.
-ИНН 7723383020 ОГРН 1157746241267</center></span></div>
-            </aside>
-        </div><!-- .widget-area -->
-    </div><!-- .sidebar-before-footer .wide -->
-</div>
-
-<footer id="colophon" class="site-footer">
-
-    <a href="#" class="scrollup right move visible" style="display: inline;"></a>
-
-</footer>
-<div class="cbh-wrapper cbh-en" id="clbh_div">
+    <!--<link type="text/css" rel="stylesheet" href="./MercedesBenz_files/WidgetsStyles.css">-->
+    <link type="text/css" href="./MercedesBenz_files/widget.min.css" rel="stylesheet">
+    <style type="text/css">:root .ad.super,
+    :root .mw > #rcnt > #center_col > #taw > #tvcap > .c,
+    :root .mw > #rcnt > #center_col > #taw > .c,
+    :root .ch[onclick="ga(this,event)"] {
+        display: none !important;
+    }</style>
+</head>
+<body class="windows-platform">
     <div id="cbh_widget_wrapper" class="cbh-show" style="z-index: 9000010;">
-        <div class="cbh-widget lightSpeedIn " id="clbh_phone_div" style="z-index: 9000010;">
+        <div class="cbh-widget lightSpeedIn" id="clbh_phone_div" style="z-index: 9000010;">
             <div class="cbh-call-container" id="cbh_call_container" style="right: 181.8px; bottom: 0px;">
-                <!--<div class="cbh-widget-call cbh-widget-call_closed" style="right: 0px;">-->
-                <div id="call" class="cbh-widget-call  " style="right: 0px;">
+                <div class="cbh-widget-call  cbh-widget-call_closed" style="right: 0px;">
                     <div class="cbh-video-wrapper">
-                        <iframe class="cbh-slider-video" frameborder="0" width="100%" height="290"
-                                src="./MercedesBenz_files/saved_resource(1).html"></iframe>
+                        <iframe class="cbh-slider-video" src="" frameborder="0" height="290" width="100%"></iframe>
                     </div>
-                    <a onclick="close_phone()" href="#" class="cbh-widget-call__close cbh-widget__close"><i
-                            class="cbh-widget-icon-cancel"></i></a>
+                    <a href="#" class="cbh-widget-call__close cbh-widget__close"><i class="cbh-widget-icon-cancel"></i></a>
                     <div class="cbh-widget-slide cbh-widget-slide_closed"></div>
                     <div class="cbh-widget-call__container">
                         <div class="cbh-widget-call__container-inner" id="cbh_widget_call_container">
                             <div class="cbh-widget-call__hello" id="cbh_slider_header">
-                                <div class="sheff sheff--w1a">We"ll call <a href="#"
-                                                                            class="cbh-dialog-action-link"
+                                <div class="sheff sheff--w1a">We"ll call <a href="#" class="cbh-dialog-action-link"
                                                                             id="cbh_dialog_name">you</a> back in <span>00:26</span>
                                     seconds!
                                 </div>
@@ -998,13 +963,13 @@
                                                                 class="code">+263</span></li>
                                                     </ul>
                                                 </div>
-                                                <input type="tel" class="cbh-input instId_wirA2rue"
-                                                       id="cbh_slider_phone_input" value=""
-                                                       placeholder="+374-__-___-___"></div>
+                                                <input class="cbh-input instId_pohkCz0T" id="cbh_slider_phone_input"
+                                                       value="+374-__-___-___" placeholder="+374-__-___-___" type="tel">
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="cbh-widget-call__btn-area cbh-widget-call__timer">
-                                        <button  type="button" class="cbh-widget-call__btn" id="cbh_slider_call_btn">
+                                        <button type="button" class="cbh-widget-call__btn" id="cbh_slider_call_btn">
                                             <div class="sheff sheff--w1b">Call me</div>
                                         </button>
                                         <span id="cbh_slider_countdown_container"></span></div>
@@ -1012,23 +977,13 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="cbh-widget-call__lbl"><a
+                            href="http://callbackhunter.com/?utm_source=widget#a_aid=account"
+                            id="clbh_banner_work_to_link" target="_blank">Powered by CallbackHunter. Try for
+                        free.</a><span id="cbh-wdiget-cobrowsing-code"></span></div>
                 </div>
-                <div class="cbh-widget-callopen-wr cbh-widget-wr">
-                    <div onclick="open_phone()" id="phone" class="cbh-widget-callopen cbh-widget-open">
-                        <div class="cbh-ph-circle"></div>
-                        <div class="cbh-ph-circle-fill"></div>
-                        <button onclick="open_phone()" type="button" class="cbh-widget-button">
-                            <div class="cbh-video-wrapper">
-                                <iframe class="cbh-slider-video" frameborder="0" width="515" height="290"
-                                        src="./MercedesBenz_files/saved_resource(2).html"></iframe>
-                            </div>
-                            <i class="cbh-widget-button-phone"></i><i class="cbh-widget-button-call">Call back</i><i
-                                class="cbh-widget-button-logo cbh-rotate-icon"></i></button>
-                    </div>
-                </div>
-                <!--<div class="cbh-widget-callopen-wr cbh-widget-wr" style="right: 0px;">
-                    <div class="cbh-widget-callopen ">
+                <div class="cbh-widget-callopen-wr cbh-widget-wr" style="right: 0px;">
+                    <div class="cbh-widget-callopen">
                         <div class="cbh-ph-circle"></div>
                         <div class="cbh-ph-circle-fill"></div>
                         <button type="button" class="cbh-widget-button">
@@ -1040,12 +995,12 @@
                                                                                       style="">Call back</i><i
                                 class="cbh-widget-button-logo"></i></button>
                     </div>
-                </div>-->
+                </div>
             </div>
             <div class="cbh-chat-container" id="cbh_chat_container" style="right: 181.8px; bottom: 70px;">
-                <div class="cbh-widget-chat cbh-widget-chat_closed">
-                    <a  href="#" class="cbh-widget-chat__close cbh-widget__close"><i
-                            class="cbh-widget-icon-cancel"></i></a>
+                <div class="cbh-widget-chat cbh-widget-chat_closed"><a href="#"
+                                                                       class="cbh-widget-chat__close cbh-widget__close"><i
+                        class="cbh-widget-icon-cancel"></i></a>
                     <div class="cbh-widget-chat__container">
                         <div class="cbh-widget-chat__offices cbh-hide" id="cbh_widget_chat_offices"><select
                                 class="cbh-widget-chat__offices_select" id="cbh_widget_chat_offices_select"></select>
@@ -1061,11 +1016,14 @@
                             class="cbh-button-balloon-num"></span></span>
                         <button type="button"
                                 class="cbh-widget-button cbh-widget-msg__button cbh-widget-button-text-enabled"><i
-                                class="cbh-widget-button-msg"></i><i class="cbh-widget-button-chat">Chat</i><i
-                                class="cbh-widget-button-logo cbh-rotate-icon"></i></button>
+                                class="cbh-widget-button-msg cbh-rotate-icon"></i><i class="cbh-widget-button-chat"
+                                                                                     style="">Chat</i><i
+                                class="cbh-widget-button-logo"></i></button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+</body>
+</html>
